--- a/dev-workflow-ui/webContent/view/intermediate-events.xhtml
+++ b/dev-workflow-ui/webContent/view/intermediate-events.xhtml
@@ -13,20 +13,20 @@
 
         <h:form id="intermediateEventBeansForm">
           <p:growl id="growl" showDetail="true"/>
-          <p:dataTable id="intermediateEventsTable" var="intermediateEvent"
-            value="#{intermediateEventsBean.intermediateEvents}" rows="12" paginator="true"
+          <p:dataTable id="intermediateEventsTable" var="element"
+            value="#{intermediateEventElementsBean.intermediateEventElements}" rows="12" paginator="true"
             paginatorPosition="bottom" paginatorAlwaysVisible="false" selectionMode="single" emptyMessage="#{ivy.cm.co('/common/noEventsFound')}"
-            rowKey="#{intermediateEvent.processElementId}">
-            <p:ajax event="rowSelect" listener="#{intermediateEventsBean.onRowSelect}" update="@form" />
+            rowKey="#{element.processElementId}">
+            <p:ajax event="rowSelect" listener="#{intermediateEventElementsBean.onRowSelect}" update="@form" />
 
-            <p:column headerText="#{ivy.cm.co('/common/name')}" sortBy="#{intermediateEvent.name}">
-              <h:outputText value="#{intermediateEvent.name}" />
+            <p:column headerText="#{ivy.cm.co('/common/name')}" sortBy="#{element.name}">
+              <h:outputText value="#{element.name}" />
             </p:column>
-            <p:column headerText="#{ivy.cm.co('/common/description')}" colspan="2" sortBy="#{intermediateEvent.description}">
-              <h:outputText value="#{intermediateEvent.description}" />
+            <p:column headerText="#{ivy.cm.co('/common/description')}" colspan="2" sortBy="#{element.description}">
+              <h:outputText value="#{element.description}" />
             </p:column>
-            <p:column headerText="#{ivy.cm.co('/intermediateEvents/waiting')}" sortBy="#{intermediateEvent.size}" sortOrder="ascending">
-              <h:outputText value="#{intermediateEvent.size}" />
+            <p:column headerText="#{ivy.cm.co('/intermediateEvents/waiting')}" sortBy="#{element.eventInstancesCount}" sortOrder="ascending">
+              <h:outputText value="#{element.eventInstancesCount}" />
             </p:column>
 
           </p:dataTable>
