--- a/dev-workflow-ui/webContent/view/starts.xhtml
+++ b/dev-workflow-ui/webContent/view/starts.xhtml
@@ -5,6 +5,11 @@
 
 <h:body>
   <ui:composition template="../includes/template/template.xhtml">
+    <f:metadata>
+      <f:viewParam name="q" value="#{processesBean.globalFilter}" />
+      <f:viewParam name="projects" value="#{processesBean.projects}" />
+      <f:event type="preRenderView" listener="#{processesBean.applyUrlFilters}" />
+    </f:metadata>
     <ui:define name="content">
       <h:form id="startsForm" onkeypress="if (event.keyCode == 13) { return false; }">
 
@@ -58,7 +63,7 @@
                 <div class="flex align-items-center">
                   <h:panelGroup id="projectFilterButtons" styleClass="flex align-items-center">
                     <h:panelGroup rendered="#{processesBean.startsDataModel.projectFilterModel.projectFilterActive}">
-                      <p:commandLink actionListener="#{processesBean.resetAllFilters}" process="@this"
+                      <p:commandLink id="resetFilter" actionListener="#{processesBean.resetAllFilters}" process="@this"
                         update=":startsForm:projectStarts :startsForm:projectStarts:projectFilterButtons :startsForm:filterCheckboxes"
                         styleClass="ui-button-text ui-button-danger flex align-items-center mr-2">
                         <i class="si si-button-refresh-arrow mr-1"/>#{ivy.cm.co('/common/reset')}
@@ -79,8 +84,8 @@
                     <div class="ui-input-icon-left">
                       <i class="pi pi-search" />
                       <p:inputText id="globalFilter" placeholder="#{ivy.cm.co('/starts/search')}"
-                        value="#{processesBean.startsDataModel.globalFilter}">
-                        <p:ajax event="keyup" delay="300" oncomplete="PF('projectStartsTable').filter()" process="@none"/>
+                        value="#{processesBean.globalFilter}">
+                        <p:ajax event="keyup" delay="300" listener="#{processesBean.applyGlobalFilter}" process="@this" update=":startsForm:projectStarts"/>
                       </p:inputText>
                     </div>
                   </h:panelGroup>
@@ -142,7 +147,32 @@
         <jc:processViewer id="processViewer" title="#{processesBean.viewerTitle}"
           link="#{processesBean.viewerLink}" />
       </h:form>
+
+      <script>
+        function initializeGlobalFilter() {
+          const urlParams = new URLSearchParams(window.location.search);
+          const qParam = urlParams.get('q');
+
+          if (qParam) {
+            const globalFilterInput = document.querySelector('input[id$="globalFilter"]');
+            if (globalFilterInput) {
+              const decodedValue = decodeURIComponent(qParam);
+              globalFilterInput.value = decodedValue;
+              globalFilterInput.setAttribute('value', decodedValue);
+            }
+          }
+        }
+
+        function handleBrowserNavigation(event) {
+          // reload the page when user navigates back/forward
+          window.location.reload();
+        }
+
+        document.addEventListener('DOMContentLoaded', initializeGlobalFilter);
+        window.addEventListener('popstate', handleBrowserNavigation);
+      </script>
     </ui:define>
   </ui:composition>
 </h:body>
+
 </html>
