--- a/dev-workflow-ui/webContent/view/starts.xhtml
+++ b/dev-workflow-ui/webContent/view/starts.xhtml
@@ -6,9 +6,9 @@
 <h:body>
   <ui:composition template="../includes/template/template.xhtml">
     <f:metadata>
-      <f:viewParam name="q" value="#{processesBean.globalFilter}" />
+      <f:viewParam name="q" value="#{processesBean.startsDataModel.globalFilter}" />
       <f:viewParam name="projects" value="#{processesBean.projects}" />
-      <f:event type="preRenderView" listener="#{processesBean.applyUrlFilters}" />
+      <f:event type="preRenderView" listener="#{processesBean.initializeView}" />
     </f:metadata>
     <ui:define name="content">
       <h:form id="startsForm" onkeypress="if (event.keyCode == 13) { return false; }">
@@ -84,7 +84,7 @@
                     <div class="ui-input-icon-left">
                       <i class="pi pi-search" />
                       <p:inputText id="globalFilter" placeholder="#{ivy.cm.co('/starts/search')}"
-                        value="#{processesBean.globalFilter}">
+                        value="#{processesBean.startsDataModel.globalFilter}">
                         <p:ajax event="keyup" delay="300" listener="#{processesBean.applyGlobalFilter}" process="@this" update=":startsForm:projectStarts"/>
                       </p:inputText>
                     </div>
