--- a/dev-workflow-ui/webContent/view/starts.xhtml
+++ b/dev-workflow-ui/webContent/view/starts.xhtml
@@ -85,7 +85,7 @@
                       <i class="pi pi-search" />
                       <p:inputText id="globalFilter" placeholder="#{ivy.cm.co('/starts/search')}"
                         value="#{processesBean.startsDataModel.globalFilter}">
-                        <p:ajax event="keyup" delay="300" listener="#{processesBean.applyGlobalFilter}" process="@this" update=":startsForm:projectStarts"/>
+                        <p:ajax event="keyup" delay="300" listener="#{processesBean.updateUrlWithFilters}" process="@this" update=":startsForm:projectStarts"/>
                       </p:inputText>
                     </div>
                   </h:panelGroup>
