--- a/dev-workflow-ui/webContent/view/switch-user.xhtml
+++ b/dev-workflow-ui/webContent/view/switch-user.xhtml
@@ -5,7 +5,7 @@
 
 <h:body>
   <f:metadata>
-    <f:viewParam name="originalUrl" value="#{loginBean.originalUrl}" />
+    <f:viewParam name="origin" value="#{loginBean.origin}" />
   </f:metadata>
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
