--- a/dev-workflow-ui/webContent/view/frame.xhtml
+++ b/dev-workflow-ui/webContent/view/frame.xhtml
@@ -4,7 +4,7 @@
   xmlns:pe="http://primefaces.org/ui/extensions">
 <h:body>
   <f:metadata>
-    <f:viewParam name="originalUrl" value="#{frameBean.originalUrl}"/>
+    <f:viewParam name="origin" value="#{frameBean.origin}"/>
   </f:metadata>
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="head">
